# IntergalacticLifelineI

./: .gitignore  .gitmodules  CMakeLists.txt  ISSUE_TEMPLATE.md  README.md  get_means.py  initial_plots.py
Classifier/MDP/: DTW-EMTree.py  DTW-EMTreeTests.ipynb  Makefile  emtree.py  out.txt  results.txt  s2classifier.py  translate_csv.py
GrubbyAI/: .gitignore
GrubbyAI/include/: AdditionalFunctionality.h  GameBoard.h  GameTile.h  Globals.h  Grubby.h  Maps.h
GrubbyAI/src/: AdditionalFunctionality.cpp  GameBoard.cpp  GameTile.cpp  Grubby.cpp  main.cpp
GrubbyAI/vs/: GrubbyAI.sln  GrubbyAI.vcxproj  GrubbyAI.vcxproj.filters
src/: CMakeLists.txt
